package com.hnd14.game.core.concept;

import java.util.Set;

public interface Board {
    Set<Position> getPositions();
}
