package com.hnd14.game.core.concept;

public abstract class Side {
}
